crates/strider-analyze/tests/snapshots/v2__x64__calls__main.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x4011e0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x6:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x401250:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "8" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x5:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v12" [label="Post Call\nRSI", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "8" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "14" -> "8" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "8" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x401290:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "15" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x3:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "15" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v20" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v20" [color="#888888", style=dashed];
  "v20" -> "15" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "21" -> "15" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "22" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "15" -> "22" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x4012b0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "25" -> "22" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v26" [label="Post Call\nRSI", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v26" [color="#888888", style=dashed];
  "v26" -> "22" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v27" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v27" [color="#888888", style=dashed];
  "v27" -> "22" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "28" -> "22" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "29" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "22" -> "29" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x4012d0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "29" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "33" -> "29" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x5:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v34" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v34" [color="#888888", style=dashed];
  "v34" -> "29" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "35" -> "29" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "36" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "29" -> "36" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x4012e0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "39" -> "36" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x4011d0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v40" [label="Post Call\nRSI", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v40" [color="#888888", style=dashed];
  "v40" -> "36" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v41" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v41" [color="#888888", style=dashed];
  "v41" -> "36" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "42" -> "36" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "43" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "36" -> "43" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "v46" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v46" [color="#888888", style=dashed];
  "v46" -> "43" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v47" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v47" [color="#888888", style=dashed];
  "v47" -> "43" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v48" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v48" [color="#888888", style=dashed];
  "v48" -> "43" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "45" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "49" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v52" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v52" [color="#888888", style=dashed];
  "v52" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "36" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "50" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "53" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "54" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0xfffffffffffffff4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "44" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "36" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "49" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "57" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "57" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v58" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v58" [color="#888888", style=dashed];
  "v58" -> "57" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "59" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "61" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x4010bc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "29" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "59" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "63" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "64" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "29" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "65" -> "64" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "65" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "54" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0xfffffffffffffff4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "67" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "67" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v68" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v68" [color="#888888", style=dashed];
  "v68" -> "67" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "69" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "71" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0x4010a4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "22" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "69" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "73" -> "69" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "74" -> "73" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "73" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "22" -> "74" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "65" -> "74" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "28" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "75" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "75" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v76" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v76" [color="#888888", style=dashed];
  "v76" -> "75" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "77" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v78" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v78" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "79" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x401087:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "77" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "15" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v80" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v80" -> "77" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "81" -> "77" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "81" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "82" -> "81" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "81" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "82" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "15" -> "82" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "65" -> "82" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "21" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "83" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "83" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v84" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v84" [color="#888888", style=dashed];
  "v84" -> "83" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "85" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v86" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v86" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "87" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "87" [label="const 0x40106f:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "85" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "8" -> "85" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v88" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v88" -> "85" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "89" -> "85" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "89" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "90" -> "89" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "83" -> "89" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "90" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "90" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "65" -> "90" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "14" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "91" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "91" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v92" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v92" [color="#888888", style=dashed];
  "v92" -> "91" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "93" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v94" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v94" -> "9" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "95" -> "9" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "95" [label="const 0x401052:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "93" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "1" -> "93" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v96" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v96" -> "93" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "97" -> "93" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "97" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "98" -> "97" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "91" -> "97" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "98" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "98" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "65" -> "98" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "7" [label="arg[4] ← R8", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← RSI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "99" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v100" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v100" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "101" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "101" [label="const 0x40103a:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "99" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "102" -> "99" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v103" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v103" -> "99" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "104" -> "99" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "104" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "102" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
